Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
 
     <section class="main-content">
       <h3>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
+<a id="hello" class="anchor" href="#hello" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello!</h3>
 
-<ul>
-<li>Download from above (if you don't know which one to choose click "Download .zip)</li>
-<li>Extract the files (Right Click -&gt; Extract All)</li>
-<li>Double click "MSE.exe" to start.</li>
-<li>(Optional) Create a shortcut to put somewhere else (Right Click -&gt; Create Shortcut</li>
-</ul>
+<p>If you are looking to download a working copy of the Ministry Search Engine then this is not the page you were looking for (email me if you need help).
+If you wish to look at or contribute to the code then please continue!</p>
+
+<h3>
+<a id="things-to-be-aware-of" class="anchor" href="#things-to-be-aware-of" aria-hidden="true"><span class="octicon octicon-link"></span></a>Things to be aware of</h3>
+
+<p>The resources are not included in the Github project you will need to download or generate them separately.</p>
+
+<p>You can generate the resources using the <a href="https://github.com/0mpurdy/MSE-FilePrep">File Prepare</a> project and the <a href="https://github.com/0mpurdy/MSE-Res-Lite">Resource seed</a>. (More instructions on the File Prepare README)</p>
+
+<p>The default location for resources is "res/" but this can be changed in the config file (generated whenever you run the project)</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
